Deploy Ec2 web server with cloudformation.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Deploy Ec2 web server with cloudformation

Parameters:
  KeyName:
    Description: Name of Keypair to ssh
    Type: AWS::EC2::KeyPair::KeyName
    Default: Ojo1-Core-Key

  VPC:
    Type: String
    Default: vpc-0df2be796d679ad9b

  InstanceTypeParameter:
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.large

Resources:
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Enable SSH and HTTP access
       VpcId: !Ref VPC

   WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Allow http to client host
       VpcId: !Ref VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0
       SecurityGroupEgress:
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0

   WebServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceTypeParameter
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      KeyName: !Ref KeyName
      ImageId: ami-0100e595e1cc1ff7f 
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<h1>Hello Ojo!</h1>" > /var/www/html/index.html

Outputs:
  InstanceId:
    Description: The ID of the EC2 instance
    Value: !Ref WebServerInstance

  PublicIP:
    Description: Public Ip of the instance
    Value: !GetAtt WebServerInstance.PublicIp

  WebURL:
    Description: URL to access the web server
    Value: !Sub "http://${WebServerInstance.PublicDnsName}"
